--- a/src/styles/Colors.css
+++ b/src/styles/Colors.css
@@ -4,7 +4,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    height: 700px;
+    height: 750px;
 }
 
 .copy-wrapper {
@@ -29,8 +29,8 @@
     object-fit: cover;
 }
 
-.image-wrapper {
-    height: 500px;
+.colors-wrapper .image-wrapper {
+    height: 520px;
 }
 
 .button-wrapper {
