--- a/src/styles/Nav.css
+++ b/src/styles/Nav.css
@@ -32,6 +32,7 @@ svg {
 
 .navbar li {
     cursor: pointer;
+    transition: color 0.3s ease-in-out;
 }
 
 .navbar li:hover {
@@ -40,4 +41,10 @@ svg {
 
 .navbar li:hover svg {
     fill: white;
+}
+
+
+a {
+    text-decoration: none;
+    color: inherit;
 }
