--- a/src/styles/Homepage.css
+++ b/src/styles/Homepage.css
@@ -40,6 +40,7 @@
     justify-content: center;
     color: #2997FF;
     font-size: 1.2em;
+    align-items: center;
 }
 
 .learn-more-link, .buy-link {
