--- a/src/styles/Airpodsbanner.css
+++ b/src/styles/Airpodsbanner.css
@@ -7,25 +7,24 @@
     gap: 5px;
     font-size: 0.93em;
     background-color: #F8F8F9;
-    transition: background-color 4s ease-in-out;
-    transition: color 1s ease-in-out;
-    animation: slide-down 1s ease-in-out;
+    transition: background-color 1s ease-in-out 1s, color 1s ease-in-out 1s;
+    animation: slide-down 0.5s ease-in-out;
 }
 
 .learn-more-link {
     color: #297ED3;
-    transform: color 4s ease-in-out;
+    transition: color 1s ease-in-out 1s;
 }
+
 .airpods-banner.change {
     background-color: #297ED3;
     color: white;
-    transition: background-color 4s ease-in-out;
-    transition: color 1s ease-in-out;
+    transition: background-color 1s ease-in-out, color 1s ease-in-out;
 }
 
 .learn-more-link.change {
-    color: white;
-    transition: color 4s ease-in-out;
+  color: white;
+  transition: color 1s ease-in-out;
 }
 
 @keyframes slide-down {
