--- a/src/styles/IPhoneBanner.css
+++ b/src/styles/IPhoneBanner.css
@@ -1,7 +1,7 @@
 .shop-iphone-link {
     cursor: pointer;
     color: #297ED3;
-    transition: color 4s ease-in-out;
+    transition: color 1s ease-in-out 1s;
 }
 
 .shop-iphone-link:hover {
@@ -16,21 +16,19 @@
     gap: 5px;
     font-size: 0.93em;
     background-color: #F5F5F7;
-    transition: background-color 4s ease-in-out;
-    transition: color 1s ease-in-out;
-    animation: slide-down 1s ease-in-out;
+    transition: background-color 1s ease-in-out 1s, color 1s ease-in-out 1s;
+    animation: slide-down 0.5s ease-in-out;
 }
 
 .iphone-banner.change {
     background-color: #297ED3;
     color: white;
-    transition: background-color 4s ease-in-out;
-    transition: color 1s ease-in-out;
+    transition: background-color 1s ease-in-out, color 1s ease-in-out;
 }
 
 .shop-iphone-link.change {
     color: white;
-    transition: color 4s ease-in-out;
+    transition: color 1s ease-in-out;
 }
 
 @keyframes slide-down {
