--- a/src/styles/Nav.css
+++ b/src/styles/Nav.css
@@ -17,6 +17,10 @@
     background-color: rgba(18, 18, 18, 0.9);
 }
 
+.navbar.active-cart {
+    background-color: #161617;
+}
+
 svg {
     fill: #DADADA;
 }
