Fix banner transition bug + button-wrapper bug

--- a/src/styles/AirpodsMain.css
+++ b/src/styles/AirpodsMain.css
@@ -22,7 +22,7 @@
     margin: 5px;
 }
 
-.button-wrapper {
+.airpods-main .button-wrapper {
     margin-top: auto;
     position: absolute;
     top: 90%;
