--- a/src/styles/Nav.css
+++ b/src/styles/Nav.css
@@ -52,3 +52,30 @@ a {
     text-decoration: none;
     color: inherit;
 }
+
+.bag-icon {
+    position: relative;
+}
+
+.nav-bag-wrapper {
+    position: relative;
+}
+
+#cart-circle {
+    position: absolute;
+    top: 21px;
+    left: 6px;
+    stroke: none;
+}
+
+#cart-circle text {
+    font-size: 11px;
+    font-weight: 600;
+    fill: #454545;
+    text-anchor: middle;
+    dominant-baseline: central;
+}
+
+#cart-circle.hidden {
+    display: none;
+}
