--- a/src/styles/AirpodsMain.css
+++ b/src/styles/AirpodsMain.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 30px 150px;
+    padding: 30px 8.5%;
     background-color: #F5F5F7;
     gap: 30px;
 }
