--- a/src/styles/CartReview.css
+++ b/src/styles/CartReview.css
@@ -121,11 +121,12 @@
 }
 
 .info-mid {
-    margin-top: 1.5em;
+    margin-top: 1.2em;
     display: flex;
     gap: 0.5em;
     padding-bottom: 1em;
     border-bottom: 1px solid lightgrey;
+    align-items: center;
 }
 
 .add-link {
@@ -182,4 +183,37 @@ select:focus {
 
 select:focus-visible {
     border-color: #076ACD;
+}
+
+.cart-review-summary {
+    display: flex;
+    flex-direction: column;
+    margin-top: 4em;
+}
+
+.cart-review-summary h2 {
+    font-weight: 500;
+}
+
+.cart-review-summary p {
+    margin: 0;
+}
+
+.summary-top {
+    display: flex;
+    flex-direction: column;
+    border-bottom: 1px solid lightgray;
+    padding-bottom: 1em;
+    gap: 0.8em;
+}
+
+.summary-top-1, .summary-top-2, .summary-top-3 {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.summary-bottom {
+    display: flex;
+    justify-content: space-between;
 }
